# discord.db

./: .env.sample  .gitignore  README.md  setup.cfg  setup.py  test-crud.py
ERD/: erd.dio
ddl/master/: create_table.sql
mo9mo9db/: .env.sample  dbconfig.py  dbsession.py  dbtables.py  requirements.txt  test-crud.py
