[metadata]
name = mo9mo9db
version = 0.0.2
author = su-pleiades
author_email = su.impreza.itengineer@gmail.com
description = discord.guild[mo9mo9study]でDBと連携するために使用するモジュール
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mo9mo9study/discord.db
python_requires = >=3.7

[options]
package_dir =
    =mo9mo9db
package = find:
install_requires =
    requirements

[options.packages.find]
exclude = test*
