[metadata]
name = mo9mo9db
version = 0.0.8
author = su-pleiades
author_email = su.impreza.itengineer@gmail.com
description = discord.guild[mo9mo9study]でDBと連携するために使用するモジュール
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mo9mo9study/discord.db
python_requires = >=3.8.2

[options]
packages = find:
install_requires =
    PyMySQL
    python-dotenv
    SQLAlchemy==1.3.23
    SQLAlchemy-Utils==0.36.8

[options.packages.find]
exclude = test*
